Update shadowsocks config
Use xchacha20-ietf-poly1305 in kaguya.

--- a/configure/general/shadowsocks/config-3127-jp.json
+++ b/configure/general/shadowsocks/config-3127-jp.json
@@ -4,7 +4,7 @@
   "local_port": 3127,
   "password": "kokyo",
   "timeout": 300,
-  "method": "chacha20-ietf-poly1305",
+  "method": "xchacha20-ietf-poly1305",
   "fast_open": true,
   "mode": "tcp_and_udp"
 }
