--- a/configure/general/shadowrocket.conf
+++ b/configure/general/shadowrocket.conf
@@ -21,8 +21,10 @@ udp-policy-not-supported-behaviour = REJECT
 # Block HTTP3/QUIC
 # AND,((PROTOCOL,UDP),(DEST-PORT,443)),REJECT-NO-DROP
 
-# gamer.com.tw
+# TW
 DOMAIN-SUFFIX,gamer.com.tw,PROXY
+DOMAIN-SUFFIX,hinet.net,PROXY
+DOMAIN-SUFFIX,linetv.tw,PROXY
 
 # LAN
 # IP-CIDR,192.168.0.0/16,DIRECT
